--- a/web_mailing/templates/web_mailing/clientmodel_list.html
+++ b/web_mailing/templates/web_mailing/clientmodel_list.html
@@ -7,8 +7,26 @@
 
 {% for client in object_list %}
 
-<div class="container" style="width: 50 rem">
-    {{ client.full_name }}  {{ client.email }}
+<div class="container  mt-3" style="width:50rem">
+
+    <div class="card">
+        <div class="row">
+        <div class="col-6">
+<div class="card-body">
+
+            <p>{{ client.full_name }}  {{ client.email }}</p>
 </div>
+
+        </div>
+        <div class="col-6">
+ <div class="btn-group" role="group">
+    <a href="{% url 'web_mailing:client_detail' client.pk %}" class="btn btn-primary mt-3 mb-3">Подробнее</a>
+    <a href="{% url 'web_mailing:client_update' client.pk %}" class="btn btn-primary mt-3 mb-3">Редактировать</a>
+    <a href="{% url 'web_mailing:client_delete' client.pk %}" class="btn btn-primary mt-3 mb-3">Удалить</a>
+    </div>
+        </div>
+        </div></div>
+</div>
+
 {% endfor %}
 {% endblock %}
