--- a/web_mailing/templates/base.html
+++ b/web_mailing/templates/base.html
@@ -18,6 +18,6 @@
 
 
 </div>
-      <script src="/static/js/bootstrap.bundle.min.js"></script>
+      <script src="/static/js/bootstrap.bundle.js"></script>
 </body>
 </html>
