написан шаблон для списка рассылок

--- a/web_mailing/templates/menu.html
+++ b/web_mailing/templates/menu.html
@@ -20,8 +20,8 @@
   <li class="nav-item mt-3 mb-3 me-3"><a href="{% url 'web_mailing:messages_list' %}">
       <button type="button" class="btn btn-primary">Сообщения</button></a>
   </li>
-  <li class="nav-item mt-3 mb-3 me-3">
-    <button type="button" class="btn btn-primary">Рассылки</button>
+  <li class="nav-item mt-3 mb-3 me-3"><a href="{% url 'web_mailing:mailing_list' %}">
+    <button type="button" class="btn btn-primary">Рассылки</button></a>
   </li>
   <li class="nav-item mt-3 mb-3 me-3">
     <button type="button" class="btn btn-primary">Управление рассылками</button>
